# new_agelbub

./: Cargo.toml  currency.db
.github/workflows/: deploy.yml
migrations/: 001_initial.sql
src/: auction.rs  crypto.rs  database.rs  funny.rs  main.rs
src/commands/: admin.rs  mod.rs  user.rs  utility.rs
